--- a/src/main/resources/com/liceolapaz/bcdnob/ahorca_do/ahorcado-view.fxml
+++ b/src/main/resources/com/liceolapaz/bcdnob/ahorca_do/ahorcado-view.fxml
@@ -6,7 +6,7 @@
 
 <AnchorPane fx:id="menu" prefHeight="100" prefWidth="100" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.liceolapaz.bcdnob.ahorca_do.controllers.MenuController">
    <children>
-      <Button onAction="#handlePlay" fx:id="menuButton" alignment="CENTER" layoutX="629.0" layoutY="345.0" mnemonicParsing="false" text="PLAY" textFill="#ffffffa3">
+      <Button onAction="#handlePlay" fx:id="menuButton" alignment="CENTER" layoutX="629.0" layoutY="345.0" mnemonicParsing="false" text="JUGAR" textFill="#ffffffa3">
          <font>
             <Font name="Comic Sans MS Bold Italic" size="30.0" />
          </font>
