--- a/src/main/resources/styles/styles.css
+++ b/src/main/resources/styles/styles.css
@@ -3,13 +3,17 @@
     -fx-background-image: url("../images/menu.png");
     -fx-background-size: 100% 150%;
 }
-#menuButton
-{
-    -fx-background-color: #00000000;
 
+#menu .button
+{
+    -fx-background-color: transparent;
+    -fx-text-fill: white;
 }
 
-#menuButton:hover {
-    -fx-background-color: #616161;
-    -fx-text-fill: #333333;
+
+#menu .button:hover
+{
+    -fx-background-color: white;
+    -fx-text-fill: black;
+    -fx-cursor: hand;
 }
