--- a/src/main/resources/com/liceolapaz/bcdnob/ahorca_do/menu-view.fxml
+++ b/src/main/resources/com/liceolapaz/bcdnob/ahorca_do/menu-view.fxml
@@ -4,25 +4,25 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="menu" prefHeight="100" prefWidth="100" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.liceolapaz.bcdnob.ahorca_do.controllers.MenuController">
+<AnchorPane fx:id="menu" prefHeight="100" prefWidth="100" styleClass="background" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.liceolapaz.bcdnob.ahorca_do.controllers.MenuController">
     <children>
-      <VBox alignment="CENTER" layoutX="395.0" layoutY="345.0" prefHeight="200.0" prefWidth="334.0" spacing="30.0">
-         <children>
-              <Button fx:id="menuButton" alignment="CENTER" mnemonicParsing="false" onAction="#handleJugar" prefHeight="63.0" prefWidth="152.0" text="Jugar" textFill="#ffffffa3">
-                  <font>
-                      <Font name="Comic Sans MS Bold Italic" size="30.0" />
-                  </font>
-              </Button>
-            <Button fx:id="menuButton1" alignment="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleSearchFriend" prefHeight="63.0" prefWidth="235.0" text="Buscar amigo" textFill="#ffffffa3">
-               <font>
-                  <Font name="Comic Sans MS Bold Italic" size="30.0" />
-               </font>
-            </Button>
-            <Button fx:id="menuButton2" alignment="CENTER" layoutX="101.0" layoutY="32.0" mnemonicParsing="false" onAction="#handlePlay" prefHeight="63.0" prefWidth="354.0" text="Jugar con un amigo" textFill="#ffffffa3">
-               <font>
-                  <Font name="Comic Sans MS Bold Italic" size="30.0" />
-               </font>
-            </Button>
-         </children></VBox>
+        <VBox alignment="CENTER" layoutX="395.0" layoutY="345.0" prefHeight="200.0" prefWidth="334.0" spacing="30.0">
+            <children>
+                <Button fx:id="menuButton" alignment="CENTER" mnemonicParsing="false" onAction="#handleJugar" prefHeight="63.0" prefWidth="152.0" text="Jugar">
+                    <font>
+                        <Font name="Comic Sans MS Bold Italic" size="30.0" />
+                    </font>
+                </Button>
+                <Button fx:id="menuButton1" alignment="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleSearchFriend" prefHeight="63.0" prefWidth="235.0" text="Buscar amigo">
+                    <font>
+                        <Font name="Comic Sans MS Bold Italic" size="30.0" />
+                    </font>
+                </Button>
+                <Button fx:id="menuButton2" alignment="CENTER" layoutX="101.0" layoutY="32.0" mnemonicParsing="false" onAction="#handlePlay" prefHeight="63.0" prefWidth="354.0" text="Jugar con un amigo">
+                    <font>
+                        <Font name="Comic Sans MS Bold Italic" size="30.0" />
+                    </font>
+                </Button>
+            </children></VBox>
     </children>
 </AnchorPane>
