--- a/src/main/resources/styles/styles.css
+++ b/src/main/resources/styles/styles.css
@@ -4,12 +4,31 @@
     -fx-background-size: 100% 150%;
 }
 
+#menuGame .button
+{
+    -fx-font-family: "Comic Sans MS";
+    -fx-font-weight: bold;
+    -fx-font-style: italic;
+    -fx-font-size: 30px;
+    -fx-text-fill: #ffffffa3;
+}
+
+#menuGame .button:hover
+{
+    -fx-background-color: #616161;
+    -fx-text-fill: #333333;
+}
+
+#menuGame
+{
+    -fx-background-image: url("../images/blackboard.jpg");
+    -fx-background-size: 100% 100%;
+}
 
 .background {
     -fx-background-image: url("../images/blackboard.jpg");
     -fx-background-size: 100% 100%;
 }
-
 
 .button {
     -fx-background-color: transparent;
