--- a/src/main/resources/com/liceolapaz/bcdnob/ahorca_do/menu-view.fxml
+++ b/src/main/resources/com/liceolapaz/bcdnob/ahorca_do/menu-view.fxml
@@ -1,25 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox fx:id="menuGame" alignment="CENTER" prefHeight="100" prefWidth="100" spacing="50.0" styleClass="background" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.liceolapaz.bcdnob.ahorca_do.controllers.MenuController">
+<VBox fx:id="menuGame" alignment="CENTER" prefHeight="500.0" prefWidth="700.0" spacing="25.0" styleClass="background" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.liceolapaz.bcdnob.ahorca_do.controllers.MenuController">
     <children>
-          <Button fx:id="menuButton" alignment="CENTER" mnemonicParsing="false" onAction="#handleJugar" prefHeight="63.0" prefWidth="152.0" text="Jugar">
-              <font>
-                  <Font name="Comic Sans MS Bold Italic" size="30.0" />
-              </font>
-          </Button>
-          <Button fx:id="menuButton1" alignment="CENTER" mnemonicParsing="false" onAction="#handleSearchFriend" prefHeight="63.0" prefWidth="235.0" text="Buscar amigo">
-              <font>
-                  <Font name="Comic Sans MS Bold Italic" size="30.0" />
-              </font>
-          </Button>
-          <Button fx:id="menuButton2" alignment="CENTER" mnemonicParsing="false" onAction="#handlePlay" prefHeight="63.0" prefWidth="354.0" text="Jugar con un amigo">
-              <font>
-                  <Font name="Comic Sans MS Bold Italic" size="30.0" />
-              </font>
-          </Button>
+        <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../../../../images/icon.png" />
+            </image>
+            <VBox.margin>
+                <Insets top="20.0" />
+            </VBox.margin>
+        </ImageView>
+
+        <Label text="MENÚ PRINCIPAL" textFill="#ffffffd9">
+            <font>
+                <Font name="Comic Sans MS Bold" size="36.0" />
+            </font>
+        </Label>
+
+        <Separator maxWidth="400.0" opacity="0.6" />
+
+        <VBox alignment="CENTER" spacing="20.0">
+            <children>
+                <Button fx:id="menuButton" alignment="CENTER" mnemonicParsing="false" onAction="#handleJugar" prefHeight="50.0" prefWidth="350.0" text="Jugar">
+                    <font>
+                        <Font name="Comic Sans MS Bold Italic" size="24.0" />
+                    </font>
+                </Button>
+
+                <Button fx:id="menuButton1" alignment="CENTER" mnemonicParsing="false" onAction="#handleSearchFriend" prefHeight="50.0" prefWidth="350.0" text="Buscar amigo">
+                    <font>
+                        <Font name="Comic Sans MS Bold Italic" size="24.0" />
+                    </font>
+                </Button>
+
+                <Button fx:id="menuButton2" alignment="CENTER" mnemonicParsing="false" onAction="#handlePlay" prefHeight="50.0" prefWidth="350.0" text="Jugar con un amigo">
+                    <font>
+                        <Font name="Comic Sans MS Bold Italic" size="24.0" />
+                    </font>
+                </Button>
+            </children>
+            <VBox.margin>
+                <Insets bottom="30.0" top="10.0" />
+            </VBox.margin>
+        </VBox>
     </children>
 </VBox>
