--- a/src/main/resources/com/liceolapaz/bcdnob/ahorca_do/menu-view.fxml
+++ b/src/main/resources/com/liceolapaz/bcdnob/ahorca_do/menu-view.fxml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox fx:id="menuGame" alignment="CENTER" prefHeight="500.0" prefWidth="700.0" spacing="25.0" styleClass="background" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.liceolapaz.bcdnob.ahorca_do.controllers.MenuController">
+<VBox fx:id="menuGame" alignment="CENTER" prefHeight="500.0" prefWidth="700.0" spacing="25.0" styleClass="background" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.liceolapaz.bcdnob.ahorca_do.controllers.MenuController">
     <children>
         <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -30,19 +27,13 @@
 
         <VBox alignment="CENTER" spacing="20.0">
             <children>
-                <Button fx:id="menuButton" alignment="CENTER" mnemonicParsing="false" onAction="#handleJugar" prefHeight="50.0" prefWidth="350.0" text="Jugar">
+                <Button fx:id="menuButton" alignment="CENTER" mnemonicParsing="false" onAction="#handleJugar" prefHeight="50.0" prefWidth="350.0" text="Un jugador">
                     <font>
                         <Font name="Comic Sans MS Bold Italic" size="24.0" />
                     </font>
                 </Button>
 
-                <Button fx:id="menuButton1" alignment="CENTER" mnemonicParsing="false" onAction="#handleSearchFriend" prefHeight="50.0" prefWidth="350.0" text="Buscar amigo">
-                    <font>
-                        <Font name="Comic Sans MS Bold Italic" size="24.0" />
-                    </font>
-                </Button>
-
-                <Button fx:id="menuButton2" alignment="CENTER" mnemonicParsing="false" onAction="#handlePlay" prefHeight="50.0" prefWidth="350.0" text="Jugar con un amigo">
+                <Button fx:id="menuButton1" alignment="CENTER" mnemonicParsing="false" onAction="#handleSearchFriend" prefHeight="50.0" prefWidth="350.0" text="Dos Jugadores">
                     <font>
                         <Font name="Comic Sans MS Bold Italic" size="24.0" />
                     </font>
